<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.profile.ProfileFragment"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_layout_bg"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:paddingBottom="30dp"
            android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/user_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_avatar"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/client_photo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:startIconDrawable="@drawable/ic_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:startIconDrawable="@drawable/ic_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/personal_code"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:startIconDrawable="@drawable/ic_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/personal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:startIconDrawable="@drawable/ic_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_date"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:startIconDrawable="@drawable/ic_created"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:text="@string/log_out"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="15dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    android:layout_marginEnd="15dp"/>

                <TextView
                    android:id="@+id/click_here_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>