<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:backgroundTint="@color/colorAppBlack">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medical_department_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/department_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appointment_start_date"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/appointment_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/details_button"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:text="@string/view_details"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/white"
            app:cornerRadius="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>