<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.profile.ProfileFragment"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="140dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_layout_bg"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:paddingBottom="30dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/user_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_avatar"
                android:scaleType="centerCrop"
                android:contentDescription="@string/client_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:startIconDrawable="@drawable/ic_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medic_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:startIconDrawable="@drawable/ic_smartphone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medic_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hire_date"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:startIconDrawable="@drawable/ic_created"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hire_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>